# conversor-csv-pontos

./: .gitignore  LabeledTextField.qml  Pipfile  README.md  build.py  conversor-csv-pontos.pyproject  conversor-csv-pontos.spec  conversor.py  main.py  main.qml  pyproject.toml  requirements-linux.txt  requirements-windows.txt  requirements.txt
Components/: LabeledTextField.qml
Services/: calculadora_geografica.py  conversor.py
entities/: __init__.py  base_levantamento.py  coordenadas.py
services/: __init__.py
utils/: calculadora_geografica.py  conversor.py
