[project]
name = "conversor-csv-pontos"
version = "1.2.0"
description = "Aplicativo feito em Python que converte arquivos '.csv' gerados pelo Emlid Flow em um arquivo de pontos para importar no AutoCAD."
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.12.0",
    "pandas>=2.2.3",
    "pywebview>=5.4",
    "pywebview[qt]>=5.4; sys_platform == 'linux'",
    "userpaths>=0.1.3",
    "nicegui>=2.11.1",
    "pyproj>=3.7.0",
]
